adding meta charset

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta charset="utf-8">
   <title>Random Domain Generator</title>
   <script src="./js/dictionary.js"></script>
   <script>window.onload = function() {Particles.init({selector: '.background'});};</script>
